# monopoly

./: Cargo.toml
src/: action_cards.rs  atlas.rs  board.rs  main.rs  model.rs  model_color.wgsl  model_texture.wgsl  player.rs  property.rs  render.rs  screen_sys.rs  ui.rs  ui_atlas.wgsl  ui_tex.wgsl  utils.rs
src/screens/: in_game.rs  login.rs  mod.rs
